# AoC2020

./: .gitignore  README  template.py
01/: knapsack.py
01/knapsack/: Cargo.toml
01/knapsack/src/: main.rs
02/: passwords.py
02/passwords/: Cargo.toml
02/passwords/src/: main.rs
03/: toboggan.py
03/toboggan/: Cargo.toml
03/toboggan/src/: main.rs
04/: passports.py
04/passports/: Cargo.toml
04/passports/src/: main.rs
05/: boarding.py
05/boarding/: Cargo.toml
06/: customs.py
06/customs/: Cargo.toml
07/: luggage.py
07/luggage/: Cargo.toml
08/: halting.py
08/halting/: Cargo.toml
09/: xmas.py
09/xmas/: Cargo.toml
09/xmas/src/: main.rs
10/: adapters.py
10/adapters/: Cargo.toml
11/: seating.py
11/seating/: Cargo.toml
11/seating/benches/: adjacent.rs  visible.rs
11/seating/src/: basic.rs  dod.rs  lib.rs  main.rs
12/: navigate.py
12/navigate/: Cargo.toml
13/: shuttle.py
13/shuttle/: Cargo.toml
14/: bitmask.py
14/bitmask/: Cargo.toml
14/bitmask/benches/: addrmask.rs
14/bitmask/src/: bdd.rs  lib.rs  main.rs  splat.rs  split.rs
15/: conftest.py  memory.c  memory.py
15/memory/: Cargo.toml
16/: translate.py
16/translate/: Cargo.toml
17/: cubes.py
17/cubes/: Cargo.toml
18/: express.py
18/express/: Cargo.toml
19/: message.py
19/message/: Cargo.toml
20/: jigsaw.py
20/jigsaw/: Cargo.toml
21/: allergens.py
21/allergens/: Cargo.toml
22/: combat.py
22/combat/: Cargo.toml
23/: cups.py
23/cups/: Cargo.toml
24/: hextile.py
24/hextile/: Cargo.toml
25/: cracker.py
25/cracker/: Cargo.toml
(+25 files in other folders)
