[package]
name = "bitmask"
version = "0.1.0"
authors = ["spadix0 <spadix@users.sourceforge.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[lib]
doctest = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "addrmask"
harness = false
required-features = ["bench"]
